--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gnssmetrics",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +12,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
+    "geodesy": "^2.4.0",
     "google-map-react": "^2.2.1",
     "jszip": "^3.10.1",
     "mapbox": "^1.0.0-beta10",
