--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,15 @@
 # testing
 /coverage
 
+# private
+.env
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
